--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,10 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <scm>
+    <connection>scm:git:https://github.com/BluePixelCreates/takedown.git</connection>
+    <developerConnection>scm:git:https://github.com/BluePixelCreates/takedown.git</developerConnection>
+    <url>scm:git:https://github.com/BluePixelCreates/takedown.git</url>
+  </scm>
 </project>
