--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.bpcreates</groupId>
   <artifactId>remote-client</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Remote Client</name>
   <url>http://maven.apache.org</url>
