--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,15 @@
   <groupId>com.bpcreates</groupId>
   <artifactId>remote-client</artifactId>
   <version>1.2-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <packaging>jar</packaging>
   <name>Remote Client</name>
   <url>http://maven.apache.org</url>
   <properties>
