--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.bpcreates</groupId>
   <artifactId>remote-client</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
