--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.bpcreates</groupId>
-  <artifactId>remote-client</artifactId>
-  <version>1.5-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.bpcreates</groupId>
+    <artifactId>remote-client</artifactId>
+    <version>1.5-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -13,15 +26,14 @@
         </dependency>
     </dependencies>
     <packaging>jar</packaging>
-  <name>Remote Client</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <scm>
-    <connection>scm:git:https://github.com/BluePixelCreates/takedown.git</connection>
-    <developerConnection>scm:git:https://github.com/BluePixelCreates/takedown.git</developerConnection>
-    <url>scm:git:https://github.com/BluePixelCreates/takedown.git</url>
-  </scm>
+    <name>Remote Client</name>
+    <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <scm>
+        <connection>scm:git:https://github.com/BluePixelCreates/takedown.git</connection>
+        <developerConnection>scm:git:https://github.com/BluePixelCreates/takedown.git</developerConnection>
+        <url>scm:git:https://github.com/BluePixelCreates/takedown.git</url>
+    </scm>
 </project>
