--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bpcreates</groupId>
     <artifactId>remote-client</artifactId>
-    <version>1.7-SNAPSHOT</version>
+    <version>1.7</version>
     <build>
         <plugins>
             <plugin>
